Added the researcherlogin page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -140,5 +140,9 @@
     "exists":"exists",
     "userorpass_error": "Username or Password Error",
     "password_nomatcherror":"Passwords do not match"
+  },
+
+  "researcher-login": {
+    "user-type": "Researchers"
   }
 }
