--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -102,6 +102,9 @@
   },
 
   "landing-page": {
+    "Researcher": "Researcher click here",
+    "Participant": "Participant click here",  
+    "Register_choice": "Please choose one to register",
     "welcome": "Welcome to Link the Masses",
     "welcome_2": "A web application for supporting a network for researchers and participants",
     "login": "Login",
