added css to the landing package
added a lot of css and images, installed bootstrap and jquery. In TS files. Changed landing page.

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -26,16 +26,16 @@
     "address": "Adresse",
     "research_info": "Information liées aux études",
     "participated_in": "Participaté à",
-    "studies":"études"
+    "studies": "études"
   },
 
   "studies-components": {
     "studies_available": "Disponible",
     "studies_inprogress": "En cours",
     "studies_completed": "Compléter",
-    "published_studies":"Études Publiées",
-    "chat_logs":"Journals de discussion",
-    "completed_studies":"Études Compléter",
+    "published_studies": "Études Publiées",
+    "chat_logs": "Journals de discussion",
+    "completed_studies": "Études Compléter",
     "update": "Modifier",
     "submit": "Soumettre",
     "close": "Fermer",
@@ -51,7 +51,7 @@
     "action_edit": "Modifier",
     "action_delete": "Supprimer",
     "action_start": "Commencer",
-    "view":"Voir",
+    "view": "Voir",
     "description": "Description",
     "pagination": "Item par page",
     "pagination_of": "de",
@@ -63,23 +63,23 @@
     "creation_date": "Date de création",
     "author": "Auteur",
     "question": "Question",
-    "completion_status":"Sélectionnez le statut d'achèvement",
-    "date_choose":"Choisir une date",
-    "entry":"Entrée",
-    "required_field":"* Champ requis",
-    "title_req":"Titre",
-    "type_req":"Type d'étude",
-    "required":"requis",
-    "target_participant":"Participants Cibles",
-    "lower_range":"Tranche d'âge inférieure",
-    "upper_range":"Trance d'âge supérieure",
+    "completion_status": "Sélectionnez le statut d'achèvement",
+    "date_choose": "Choisir une date",
+    "entry": "Entrée",
+    "required_field": "* Champ requis",
+    "title_req": "Titre",
+    "type_req": "Type d'étude",
+    "required": "requis",
+    "target_participant": "Participants Cibles",
+    "lower_range": "Tranche d'âge inférieure",
+    "upper_range": "Trance d'âge supérieure",
     "gender": "Sexe",
-    "clear":"effacer",
-    "message":"Message",
-    "enter":"Entrer",
-    "participant":"Participant",
+    "clear": "effacer",
+    "message": "Message",
+    "enter": "Entrer",
+    "participant": "Participant",
     "researcher": "Chercheur",
-    "continue":"Continuer"
+    "continue": "Continuer"
   },
 
   "users-components": {
@@ -104,16 +104,18 @@
   "landing-page": {
     "welcome": "Bienvenu chez Link the Masses",
     "welcome_2": "Une application web pour soutenir un réseau de chercheurs et de participants",
+    "researcher": "Chercheur",
+    "participant": "Participant",
     "login": "Ouvrir une session",
     "login_2": "Se connecter",
     "register": "Créer un compte",
     "enter_username": "Nom d'utilisateur",
     "password": "Mot de passe",
     "password_confirm": "Confirmer votre mot de passe",
-    "submit":"Soumettre",
+    "submit": "Soumettre",
     "close": "Fermer",
     "required_field": "* Champ requis",
-    "applicable_field":"* Si applicable",
+    "applicable_field": "* Si applicable",
     "role_select": "Selectionner un rôle",
     "profile_info": "Informations de profil",
     "first_name": "Prénom",
@@ -134,9 +136,9 @@
     "age_req": "Un âge est",
     "gender_req": "Un sexe est",
     "required": "requis",
-    "user_exists":"L'utilisateur",
-    "exists":"existe",
+    "user_exists": "L'utilisateur",
+    "exists": "existe",
     "userorpass_error": "Erreur de nom d'utilisateur ou de mot de passe",
-    "password_nomatcherror":"Les mots de passe ne correspondent pas"
+    "password_nomatcherror": "Les mots de passe ne correspondent pas"
   }
 }
