combined brady's and mo's code

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -104,6 +104,8 @@
   "landing-page": {
     "welcome": "Welcome to Link the Masses",
     "welcome_2": "A web application for supporting a network for researchers and participants",
+    "researcher": "Researcher",
+    "participant": "Participant",
     "login": "Login",
     "login_2": "Login",
     "register": "Register",
